# saas-agent-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/routes/: agents.py  mcp.py  tenants.py
core/: config.py  database.py  hermes_bridge.py  models.py
data/: tenants.db
