[project]
name = "saas-agent-platform"
version = "0.1.0"
description = "Multi-tenant AI agent SaaS platform — Hermes Agent + MCP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "sahiixx-bus @ file:///home/sahiix/sahiixx-bus",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]
voice = ["twilio>=9", "faster-whisper>=1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["api", "core"]

[tool.ruff]
line-length = 100
target-version = "py311"
